<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loudly</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="restart_client">Restart Client</string>
    <string name="_20">20</string>
    <string name="default_ip">192.168.137.57</string>
    <string name="default_port">4445</string>
    <string name="connect">Connect</string>
    <string name="channels_">"Channels: "</string>
    <string name="encoding_">"Encoding: "</string>
    <string name="rate_">"Rate: "</string>
    <string name="interval_">"Interval: "</string>
    <string name="preferences">Preferences</string>
    <string name="save_preferences">Save preferences</string>
    <string name="restart">Restart</string>
    <string name="loudly">Loudly</string>
    <string name="loudly_logo">Loudly_logo</string>
    <string name="slika_animacija">slika_animacija</string>
    <string name="slika_logo">slika_logo</string>
    <string name="pause">Pause</string>

</resources>