<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/def_white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ActivityMain" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnConnect"
            android:gravity="center" >

            <ImageView
                android:id="@+id/ivCircle"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/slika_animacija"
                android:src="@drawable/circle"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/slika_logo"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/loudly_logo"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textColor="@color/lgt_blue"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_selector_default"
            android:padding="10dp"
            android:text="@string/connect"
            android:textColor="@drawable/btn_text_color_selector"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/BottomMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:gravity="bottom" >

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector_default"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/play"
                android:textColor="@drawable/btn_text_color_selector"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector_default"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/pause"
                android:textColor="@drawable/btn_text_color_selector"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>